--- a/Scripts/Glucose.Rmd
+++ b/Scripts/Glucose.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Glucose"
 author: "Hamza"
-date: "05/11/2020"
+date: "23/11/2020"
 output: html_document
 ---
 
@@ -19,19 +19,19 @@ pacman::p_load(lmerTest,ggThemeAssist,rptR,lme4,readxl, tidyr, dplyr, magrittr, 
 
 ```{r}
 #Import data
-Glucose_Weight <- read.csv("Data/Glucose/Glucose_Weight.csv")
+Glucose <- read.csv("Data/Glucose/Glucose_Data.csv")
+str(Glucose)
 
 #Check structure
-Glucose_Weight$Sex <- as.factor(Glucose_Weight$Sex)
-Glucose_Weight$Group <- as.factor(Glucose_Weight$Group)
-Glucose_Weight$Meter <- as.factor(Glucose_Weight$Meter)
+str(Glucose)
+Glucose$Meter <- as.factor(Glucose$Meter)
 
-hist(Glucose_Weight$Glucose)
+hist(Glucose$Glucose)
 #Very high reading confirmed to be correct
 
 
 
-Boxplot_Glucose <- ggplot(data = Glucose_Weight) +
+Boxplot_Glucose <- ggplot(data = Glucose) +
   geom_boxplot(mapping = aes(x = Sex, y = Glucose, fill = Group)) +
   facet_grid(~Group)
 
@@ -39,12 +39,12 @@ Boxplot_Glucose
 
 Summary_Glucose <- summarySE(Glucose_Weight, measurevar="Glucose", groupvars=c("Group", "Sex"))
 
-Repeatability_Glucose <- rpt(Glucose ~ Meter + Sex + Group + (1 | Fish_ID), grname = "Fish_ID", data = Glucose_Weight, datatype = "Gaussian", 
+Repeatability_Glucose <- rpt(Glucose ~ Meter + Sex + Group + (1 | Fish_ID), grname = "Fish_ID", data = Glucose, datatype = "Gaussian", 
                            nboot = 100, npermut = 100)
 
 Repeatability_Glucose
 
-Mixed_Model_Glucose <- lmer(Glucose ~ Sex + Group + (1|Fish_ID), data=Glucose_Weight)
+Mixed_Model_Glucose <- lmer(Glucose ~ Sex + Group + (1|Fish_ID), data=Glucose)
 summary(Mixed_Model_Glucose)
 tab_model(Mixed_Model_Glucose)
 
